<?xml version="1.0"?>
<package>
  <name>p3_dx</name>
  <version>0.0.0</version>
  <description>The p3_dx package</description>
  <maintainer email="ogunmolu@amazon.com">Lekan</maintainer>

  <license>Amazon Robotics License</license>
  <author email="ogunmolu@amazon.com">Lekan Ogunmolu</author>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>scanner_clouds</run_depend>
  <run_depend>sonar_clouds</run_depend>
  <run_depend>ros-arnl</run_depend>
  <run_depend>jog_mover</run_depend>
  <run_depend>scanner_clouds</run_depend>
  <run_depend>laser_scans</run_depend>
  <run_depend>odom_navs</run_depend>
  <run_depend>p3dx_2dnav</run_depend>
  <run_depend>navgoals</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>
  </export>
</package>