<?xml version="1.0"?>
<package>
  <name>p3dx_2dnav</name>
  <version>0.0.0</version>
  <description>The p3dx_2dnav package</description>

  <maintainer email="ogunmolu@amazon.com">Lekan</maintainer>


  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <!--<build_depend>my_-tf_configuration_dep</build_depend>
  <build_depend>my_odom_configuration_dep</build_depend>
  <build_depend>my_sensor_configuration_dep</build_depend> -->
 <!-- <run_depend>move_base</run_depend>
  <run_depend>my_-tf_configuration_dep</run_depend>
  <run_depend>my_odom_configuration_dep</run_depend>
  <run_depend>my_sensor_configuration_dep</run_depend>-->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>