<?xml version="1.0"?>
<package>
  <name>sonar_clouds</name>
  <version>0.0.0</version>
  <description>The sonar_clouds package</description>

   <license>Amazon Robotics License</license>
   <maintainer email="ogunmolu@amazon.com">Lekan</maintainer>
   <author email="ogunmolu@amazon.com">Lekan Ogunmolu</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>