<?xml version="1.0"?>
<package>
  <name>tf_listener</name>
  <version>0.0.0</version>
  <description>The tf_listener package</description>
  <maintainer email="ogunmolu@amazon.com">Lekan</maintainer>

  <license>MIT</license>
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_msgs</run_depend>

  <export>

  </export>
</package>